facet-macros-emit/tests/snapshots/codegen__tuple_struct_with_pub_fields.snap
---
source: facet-macros-emit/tests/codegen.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        /// This is a struct for sure\n        struct Blah(\n            /// and this is a public field\n            pub u32,\n            /// and this is a crate public field\n            pub(crate) u32,\n        );\n        \"#)"
---
#[used]
static BLAH_SHAPE: &'static ::facet::Shape = <Blah as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl<'__facet> ::facet::Facet<'__facet> for Blah {
    const SHAPE: &'static ::facet::Shape = &const {
        let fields: &'static [::facet::Field] = &const {
            [
                ::facet::Field::builder()
                    .name("0")
                    .shape(|| ::facet::shape_of(&|s: &Blah| &s.0))
                    .offset(::core::mem::offset_of!(Blah, 0))
                    .flags(::facet::FieldFlags::EMPTY)
                    .attributes(&const { [] })
                    .doc(&[" and this is a public field"])
                    .build(),
                ::facet::Field::builder()
                    .name("1")
                    .shape(|| ::facet::shape_of(&|s: &Blah| &s.1))
                    .offset(::core::mem::offset_of!(Blah, 1))
                    .flags(::facet::FieldFlags::EMPTY)
                    .attributes(&const { [] })
                    .doc(&[" and this is a crate public field"])
                    .build(),
            ]
        };
        let vtable = &const {
            let mut vtable =
                ::facet::value_vtable_inner!(Self, |f, _opts| ::core::fmt::Write::write_str(
                    f, "Blah"
                ));
            vtable
        };
        ::facet::Shape::builder()
            .id(::facet::ConstTypeId::of::<Self>())
            .layout(::core::alloc::Layout::new::<Self>())
            .vtable(vtable)
            .def(::facet::Def::Struct(
                ::facet::StructDef::builder()
                    .kind(::facet::StructKind::TupleStruct)
                    .fields(fields)
                    .build(),
            ))
            .doc(&[" This is a struct for sure"])
            .build()
    };
}
